--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ width: 50%;
                             <td>
                             <div  class="draggable  ui-widget-content" id ="drag2">
                                 <div class = "sim-row-edit" data-type = "image">
-                                    <img src ="file:///E:/Static_Full_Version/img/upload.jpg" class = "img-responsive">
+                                    <img src ="img/upload.jpg" class = "img-responsive">
                                 </div>
                             </div>
                             </td>
@@ -417,7 +417,7 @@ width: 50%;
                             <td>
                              <div  class="draggable  ui-widget-content" id ="drag4">
                                 <div class = "sim-row-edit" data-type = "image">
-                                    <img src ="file:///E:/Static_Full_Version/img/dummyproduct.jpg" class = "img-responsive">
+                                    <img src ="img/dummyproduct.jpg" class = "img-responsive">
                                 </div>
                             </div>
                             </td>
@@ -430,7 +430,7 @@ width: 50%;
                             </td>
                             <td>
                             <div  class="draggable  ui-widget-content" data-type = "image" id ="drag6">
-                                <img src ="file:///E:/Static_Full_Version/img/upload.jpg" class = "img-responsive">
+                                <img src ="img/upload.jpg" class = "img-responsive">
                             </div>
                             </td>
                         </tr>
@@ -478,7 +478,7 @@ width: 50%;
         google.load("jqueryui", "1.7.2");
 </script>
 
-<script src="file:///C:/Users/KK/Downloads/CLEditor1_4_5/jquery.cleditor.js"></script>
+<script src="js/jquery.cleditor.js"></script>
 <script>
         $(document).ready(function () { $(".editorial").cleditor({
 
